[tool.poetry]
name = "script-tipti"
version = "0.1.0"
description = ""
authors = ["Wilson Zapata <wilson.zapata@ndeveloper.com>"]
readme = "README.md"
packages = [{include = "script_tipti"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^18.9.0"
openpyxl = "^3.1.2"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
